kubernetes_configs/optional/loadbalancer_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-server-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  tls:
  - hosts:
    - test.your.domain.com
    secretName: ingress-cert
  rules:
  - host: test.your.domain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp-service
            port:
              number: 80
